[project]
name = "p25-hackaton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rom1922", email = "romain.s.giunta@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
p25-hackaton = "p25_hackaton.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
