[project]
name = "p25-hackaton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rom1922", email = "romain.s.giunta@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pygame>=2.6.1",
]

[project.scripts]
p25-hackaton = "p25_hackaton.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
